# TheOfficialTierList

./: .eslintrc.json  .gitignore  README.md  angular.json  codegen.ts  db.json  graphql.schema.json  package-lock.json  package.json  project.staging.json  tailwind.config.js  tsconfig.json  vercel.json  webpack.config.js
BackEnd/totl_backend/: Cargo.toml
BackEnd/totl_backend/database/: init.sql
BackEnd/totl_backend/src/: lib.rs  main.rs
BackEnd/totl_backend/src/database/: colors.rs  mod.rs  prelude.rs  tiers.rs  users.rs
BackEnd/totl_backend/src/routes/: create_tier.rs  delete_tier.rs  get_tiers.rs  hello_world.rs  mod.rs  update_tier.rs
FrontEnd/: db.json  tailwind.config.js
FrontEnd/src/app/: Tier.ts  app.component.spec.ts
FrontEnd/src/app/services/: tier-color.service.ts
env/: enviroment.ts
graphql/: generated.ts  lists.graphql  tiers.graphql
src/: custom-webpack.config.ts  index.html  styles.css
src/app/: Color.ts  List.ts  Tier.ts  TierGraphInput.ts  User.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  graphql.module.ts
src/app/components/add-tier/: add-tier.component.html  add-tier.component.spec.ts  add-tier.component.ts
src/app/components/button/: button.component.html  button.component.ts
src/app/components/card/: card.component.html  card.component.ts
src/app/components/footer/: footer.component.css  (+1 more)
src/app/services/: list.service.ts  tier-color.service.spec.ts  tier-color.service.ts  tier.service.ts  ui.service.ts  user.service.ts
src/graphql/: lists.graphql  tiers.graphql
(+41 files in other folders)
