[package]
name = "totl_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.6"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.154", features = ["serde_derive"] }
tokio = { version = "1.26.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
